# bunnypmsl

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PREFIXES.md  README.md  askama.toml  config.docker.toml  config.toml.docker  docker-compose.yml  mise.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.serena/: project.yml
.trunk/: trunk.yaml
.trunk/configs/: .hadolint.yaml
deploy/: DEPLOYMENT.md  auto-deploy.sh  setup-auto-deploy.sh  setup-ubuntu-server.sh
hooks/: README.md  install.sh  pre-commit
src/: bunnylol_command_registry.rs  bunnypmsl_command_registry.rs  config.rs  history.rs  lib.rs  main.rs
src/.claude/: settings.local.json
src/commands/: amazon.rs  bindings.rs  brew.rs  bunnypmsl_command.rs  cargo.rs  chatgpt.rs  choco.rs  claude.rs  dockerhub.rs  duckduckgo.rs  facebook.rs  github.rs  gitlab.rs  gmail.rs  godocs.rs  google.rs  googlechat.rs  googledocs.rs  googlemaps.rs  googlesheets.rs  googleslides.rs  gopkg.rs  hack.rs  instagram.rs  linkedin.rs  mdn.rs  meta.rs  mod.rs  node.rs  npm.rs  nuget.rs  onepassword.rs  packagist.rs  perplexity.rs  pypi.rs  python.rs  reddit.rs  rei.rs  rubygems.rs  rust.rs  (+9 more)
src/server/: mod.rs  service.rs  web.rs
src/server/templates/: base.html  landing.html
src/server/templates/components/: binding_card.html
src/utils/: mod.rs  url_encoding.rs
tests/: cli_integration.rs
